--- a/src/app/pages/group/information/group-information.page.less
+++ b/src/app/pages/group/information/group-information.page.less
@@ -22,5 +22,32 @@
   flex-direction: row;
   margin-bottom: 2px;
   padding: 10px 20px;
-  background: @color-gray-2;
+  background: @color-fill_basic_subtle;
+  color: @color-fill_text_basic;
+}
+
+.group-lesson-row-day-of-week {
+  width: 10%;
+  color: @color-fill_text_basic;
+}
+
+.group-lesson-row-time {
+  width: 20%;
+  color: @color-fill_text_basic;
+}
+
+.group-lesson-row-teacher {
+  width: 30%;
+  color: @color-fill_text_basic;
+}
+
+.group-lesson-row-status {
+  width: 30%;
+  color: @color-fill_text_basic_light;
+}
+
+.group-lesson-row-action {
+  width: 10%;
+  color: @color-fill_text_basic_action_link;
+  cursor: pointer;
 }
