--- a/src/app/pages/group/timetable/group-timetable.page.html
+++ b/src/app/pages/group/timetable/group-timetable.page.html
@@ -10,8 +10,8 @@
       </div>
 
       <ng-container *ngIf="!loadingInProgress">
-        <h3>
-          Группа '{{group.name}}'
+        <h3 class="app-header">
+          Группа '{{group.id}}'
         </h3>
 
         <br>
