--- a/src/app/pages/student/information/student-information.page.less
+++ b/src/app/pages/student/information/student-information.page.less
@@ -10,10 +10,9 @@
 }
 
 .student-vkLink-action {
-  width: 20%;
-  margin-top: 30px;
-  max-height: 40px;
-  line-height: 40px;
+  width: 19%;
+  margin-top: 32px;
+  margin-left: 1%;
 }
 
 .student-group-container {
@@ -40,36 +39,34 @@
 }
 
 .student-status-action {
-  width: 20%;
-  line-height: 30px;
+  width: 19%;
+  margin-left: 1%;
 }
 
-.student-groups-select {
-  background: @color-fill_basic_subtle;
-  color: @color-fill_text_basic;
-  width: 80%;
+.student-group {
+  width: 40%;
+  margin-bottom: 0;
+}
+
+.student-group-info {
+  width: 20%;
+  margin-left: 1%;
+  line-height: 40px;
+  font-size: 13px;
+  text-align: center;
 }
 
 .student-group-action {
-  width: 10%;
-  line-height: 36px;
-}
-
-.student-action-button {
-  text-align: center;
+  width: 12%;
+  margin-left: 1%;
+  line-height: 40px;
+  color: @color-fill_text_basic_action_link;
   cursor: pointer;
-  background: @color-fill_accent_base;
-  color: @color-fill_text_basic;
-}
-
-.student-action-button-disabled {
-  border: 1px solid #cccccc;
-  background: #dddddd;
-  color: #999999;
+  border: 1px solid @color-fill_basic_subtle;
+  border-radius: 5px;
   text-align: center;
-  cursor: pointer;
 }
 
-.student-action-button:hover {
+.student-group-action:hover {
   opacity: 0.7;
 }
