--- a/src/app/pages/student/payment/student-payment.page.html
+++ b/src/app/pages/student/payment/student-payment.page.html
@@ -10,8 +10,8 @@
       </div>
 
       <ng-container *ngIf="!loadingInProgress">
-        <h3 *ngIf="!!student.id">
-          Информация об оплате - '{{student.name}}'
+        <h3 class="app-header" *ngIf="!!student.id">
+          {{student.name}} - Оплата
         </h3>
 
         <br>
