--- a/src/app/pages/teacher/timetable/teacher-timetable.page.html
+++ b/src/app/pages/teacher/timetable/teacher-timetable.page.html
@@ -10,7 +10,7 @@
       </div>
 
       <ng-container *ngIf="!loadingInProgress">
-        <h3 *ngIf="!!teacher.id">
+        <h3 class="app-header" *ngIf="!!teacher.id">
           Учитель '{{teacher.name}}'
         </h3>
 
