--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,7 @@
 @import "styles/controls.less";
 @import 'styles/student-status.less';
 @import 'styles/scroll.less';
+@import 'styles/modal.less';
 
 .no-padding {
   padding: 0 !important;
