--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -54,11 +54,11 @@
 
 /* Alt colors */
 
-@color-alt_contrast_strong: #ebf0f5;
-@color-alt_contrast_medium: #c5d7e699;
-@color-alt_contrast_base: #c5d7e633;
-@color-alt_contrast_light: #c5d7e61a;
-@color-alt_contrast_subtle: #c5d7e60d;
+@color-alt_contrast_strong: rgba(235, 240, 245, 1.0);
+@color-alt_contrast_medium: rgba(197, 215, 230, 0.6);
+@color-alt_contrast_base: rgba(197, 215, 230, 0.2);
+@color-alt_contrast_light: rgba(197, 215, 230, 0.1);
+@color-alt_contrast_subtle: rgba(197, 215, 230, 0.06);
 
 @color-alt_basic_strong: #020508;
 @color-alt_basic_medium: #020508B2;
@@ -101,8 +101,8 @@
 /* Text */
 
 @color-fill_text_basic: #ffffff;
-@color-fill_text_basic_light: #ffffff99;
-@color-fill_text_basic_subtle: #ffffff66;
+@color-fill_text_basic_light: rgba(255, 255, 255, 0.6);
+@color-fill_text_basic_subtle: rgba(255, 255, 255, 0.4);
 
 @color-fill_text_inverse: #ffffff;
 @color-fill_text_inverse_light: #ffffff99;
