--- a/src/styles/controls.less
+++ b/src/styles/controls.less
@@ -5,16 +5,11 @@
   color: @color-fill_text_basic;
 }
 
-.app-label {
+.app-text {
   color: @color-fill_text_basic;
 }
 
-.app-select {
-  font-size: 14px;
-  font-family: hogwartsRegular;
-  padding: 9px 10px;
-  height: 40px !important;
-  background: @color-fill_basic_subtle;
+.app-label {
   color: @color-fill_text_basic;
 }
 
@@ -91,4 +86,5 @@
 
 .ng2-tag-input input {
   background-color: @color-fill_basic_subtle !important;
+  color: @color-fill_text_basic !important;
 }
