--- a/src/styles/list.less
+++ b/src/styles/list.less
@@ -6,6 +6,7 @@
   flex-direction: row;
   background: @color-fill_basic_light;
   min-height: 60px;
+  max-height: 60px;
   padding-right: 20px;
 }
 
@@ -14,6 +15,7 @@
   flex-direction: row;
   width: calc(~'100% - 16px');
   min-height: 60px;
+  max-height: 60px;
   line-height: 40px;
   padding: 10px 0 20px 20px;
   background: @color-fill_basic_light;
@@ -53,7 +55,7 @@
 }
 
 .list-row-clickable:hover {
-  background: @color-fill_basic_light;
+  background: @color-alt_contrast_light;
 }
 
 .list-row-item {
