--- a/src/styles/student-status.less
+++ b/src/styles/student-status.less
@@ -1,11 +1,9 @@
 @import "colors.less";
 
 .student-status-label {
-  padding: 5px 10px;
   border-radius: 5px;
-  line-height: 20px;
-  margin-top: 10px;
-  margin-right: 20px;
+  line-height: 40px;
+  height: 40px;
   text-align: center;
 }
 
