--- a/src/styles/tag-input.less
+++ b/src/styles/tag-input.less
@@ -5,6 +5,7 @@ tag-input {
 .ng2-tag-input {
   padding: 0 10px !important;
   border-bottom: none !important;
+  color: #ffffff;
   font-size: 14px;
 }
 
