--- a/src/app/pages/student/attendance/attendance-row/student-attendance.row.html
+++ b/src/app/pages/student/attendance/attendance-row/student-attendance.row.html
@@ -1,5 +1,5 @@
 <div class="attendance-date-column">
-  {{attendance.time | date: 'dd.MM.yyyy'}}
+  {{attendance.startTime | date: 'dd.MM.yyyy'}} {{attendance.startTime | date: 'HH:mm'}} - {{attendance.finishTime | date: 'HH:mm'}}
 </div>
 <div class="attendance-type-column">
   {{getStudentAttendanceTypeTranslation(attendance.type)}}
