--- a/src/app/pages/teacher/information/teacher-information.page.html
+++ b/src/app/pages/teacher/information/teacher-information.page.html
@@ -10,84 +10,58 @@
       </div>
 
       <ng-container *ngIf="!loadingInProgress">
-        <h3 *ngIf="!!teacher.id">
+        <h3 class="app-header" *ngIf="!!teacher.id">
           Учитель '{{teacher.name}}'
         </h3>
 
-        <h3 *ngIf="!teacher.id">
+        <h3 class="app-header" *ngIf="!teacher.id">
           Добавление учителя
         </h3>
 
         <br>
 
         <form>
-          <h5>Информация</h5>
+          <div app-form-text-input-control class="form-group"
+               [name]="'name'"
+               [label]="'Имя'"
+               [placeholder]="'Введите имя'"
+               [valid]="!!teacher.name && teacher.name.indexOf('?') === -1"
+               [value]="teacher.name"
+               [editable]="true"
+               (onChange)="teacher.name = $event"></div>
 
-          <br>
+          <div app-form-text-input-control class="form-group"
+               [name]="'login'"
+               [label]="'Логин'"
+               [placeholder]="'Введите логин'"
+               [valid]="!!teacher.login && teacher.login.indexOf('?') === -1"
+               [value]="teacher.login"
+               [editable]="true"
+               (onChange)="teacher.login = $event"></div>
 
-          <div class="form-group">
-            <label for="name">Имя:</label>
-            <input id="name" class="form-control" name="name" required minlength="1" [(ngModel)]="teacher.name" #name="ngModel"/>
-          </div>
+          <div app-form-select-control class="form-group"
+               [name]="'type'"
+               [label]="'Тип'"
+               [valid]="!!teacher.type"
+               [valueString]="teacher.type"
+               [items]="teacherTypes"
+               (onChangeString)="teacher.type = $event"></div>
 
-          <div class="form-group">
-            <label for="login">Логин:</label>
-            <input id="login" class="form-control" name="login" required minlength="1" [(ngModel)]="teacher.login" #name="ngModel"/>
-          </div>
+          <div app-form-tag-control class="form-group"
+               [name]="'telephones'"
+               [label]="'Телефоны'"
+               [placeholder]="'Введите телефон'"
+               [valid]="teacher.phones.length !== 0"
+               [value]="teacher.phones"
+               (onChange)="teacher.phones = $event"></div>
 
-          <div class="form-group">
-            <label for="type">Тип:</label>
-            <select id="type" class="form-control" name="type" required minlength="1" [(ngModel)]="teacher.type" #type="ngModel">
-              <option *ngFor="let teacherType of teacherTypes" value="{{teacherType}}">
-                {{getTeacherTypeTranslation(teacherType)}}
-              </option>
-            </select>
-          </div>
-
-          <div class="form-group">
-            <label for="phones">Телефоны:</label>
-            <tag-input id="phones" class="form-control" name="phones" [(ngModel)]="teacher.phones"
-                       [modelAsStrings]="true"
-                       [separatorKeyCodes]="[9, 14, 32]"
-                       [placeholder]="'Введите телефон'"
-                       [secondaryPlaceholder]="'Введите телефон'">
-            </tag-input>
-          </div>
-
-          <div class="form-group">
-            <label for="emails">Email:</label>
-            <tag-input id="emails" class="form-control" name="emails" [(ngModel)]="teacher.emails"
-                       [modelAsStrings]="true"
-                       [separatorKeyCodes]="[9, 14, 32]"
-                       [placeholder]="'Введите email'"
-                       [secondaryPlaceholder]="'Введите email'">
-            </tag-input>
-          </div>
-
-          <br>
-
-          <h5>Доступные часы</h5>
-
-          <br>
-
-          <div class="teacher-availability-header">
-            <div *ngFor="let dayOfWeek of daysOfWeek" class="teacher-availability-header-item">
-              {{getDayOfWeekTranslation(dayOfWeek)}}
-            </div>
-          </div>
-
-          <div class="teacher-availability-body">
-            <div *ngFor="let time of lessonTimes" class="teacher-availability-body-row">
-              <div *ngFor="let dayOfWeek of daysOfWeek"
-                   [class.teacher-availability-body-cell-available]="isAvailable(dayOfWeek, time)"
-                   [class.teacher-availability-body-cell-unavailable]="!isAvailable(dayOfWeek, time)"
-                   (click)="toggleAvailability(dayOfWeek, time)">
-                {{getTimeTranslation(time)}}
-              </div>
-            </div>
-          </div>
-
-          <br>
+          <div app-form-tag-control class="form-group"
+               [name]="'emails'"
+               [label]="'Email-ы'"
+               [placeholder]="'Введите email'"
+               [valid]="teacher.emails.length !== 0"
+               [value]="teacher.emails"
+               (onChange)="teacher.emails = $event"></div>
         </form>
       </ng-container>
     </div>
