--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -1,6 +1,20 @@
+@import "colors.less";
+
 .btn {
   font-size: 14px;
   cursor: pointer;
   height: 40px;
   vertical-align: middle;
+}
+
+.btn-secondary {
+  background: @color-fill_contrast_light;
+  color: @color-fill_text_basic;
+  border: 1px solid @color-fill_contrast_subtle;
+}
+
+.btn-secondary:hover {
+  background: @color-fill_contrast_base;
+  color: @color-fill_text_basic;
+  border: 1px solid @color-fill_contrast_light;
 }
