--- a/src/styles/page.less
+++ b/src/styles/page.less
@@ -11,6 +11,7 @@
   flex-direction: row;
   flex-grow: 1;
   background: @color-fill_basic_base;
+  overflow: hidden;
 }
 
 .menu-item-icon {
@@ -34,13 +35,14 @@
 
   color: @color-fill_text_basic;
   font-family: hogwartsBold;
+  border-right: 2px solid @color-fill_accent_strong;
 }
 
 .page-left-menu-item-inactive {
   .page-left-menu-item;
 
   cursor: pointer;
-  color: @color-fill_text_basic;
+  color: @color-fill_text_basic_action_link;
   font-family: hogwartsRegular;
 }
 
@@ -84,5 +86,5 @@
   margin-top: 10%;
   text-align: center;
   font-size: 30px;
-  color: @color-primary-normal-1;
+  color: @color-fill_accent_strong;
 }
